<resources>
    <string name="app_name">Wandoof</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_password">Password</string>
    <string name="hint_dob">Dob</string>
    <string name="hint_gender">Gender</string>
    <string name="btn_sign_up">SignUp</string>
    <string name="btn_link_login">Login</string>
    <string name="defined_view_stub_font_path">Wander with food!</string>
    <string name="nonVeg">Non-Veg</string>
    <string name="veg">Veg</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="average">Average</string>
    <string name="poor">Poor</string>
    <string name="outstanding">Outstanding</string>
    <string name="preference">Preference</string>
    <string name="foodType">Food type</string>
    <string name="title_activity_food_spot_details">FoodSpotDetailsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="notify_user_validation">Your post will be visible to other users once our moderators validate it.</string>
    <string name="name">Name</string>
    <string name="foodTrucks">Food Truck</string>
    <string name="streetVendors">Street Vendor</string>
    <string name="restaurant">Restaurant</string>
    <string name="Type">Type</string>

</resources>

